src/objects/ffr__ReportingDataRange__c.object
<CustomObject>
    <customHelpPage>ffr__helpreportingdatarange</customHelpPage>
    <fields>
        <fullName>ffr__ReportingDefinition__c</fullName>
        <label>Reporting Definition</label>
        <referenceTo>ffr__ReportingDefinition__c</referenceTo>
        <relationshipLabel>Reporting Data Ranges</relationshipLabel>
        <relationshipName>ReportingDataRanges</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ffr__ReportingObject__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Reporting Object</label>
        <referenceTo>ffr__ReportingObject__c</referenceTo>
        <relationshipLabel>Reporting Data Ranges</relationshipLabel>
        <relationshipName>ReportingDataRanges</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ffr__TemplateKey__c</fullName>
        <label>Template Key</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DR01</fullName>
                </value>
                <value>
                    <fullName>DR02</fullName>
                </value>
                <value>
                    <fullName>DR03</fullName>
                </value>
                <value>
                    <fullName>DR04</fullName>
                </value>
                <value>
                    <fullName>DR05</fullName>
                </value>
                <value>
                    <fullName>DR06</fullName>
                </value>
                <value>
                    <fullName>DR07</fullName>
                </value>
                <value>
                    <fullName>DR08</fullName>
                </value>
                <value>
                    <fullName>DR09</fullName>
                </value>
                <value>
                    <fullName>DR10</fullName>
                </value>
                <value>
                    <fullName>DR11</fullName>
                </value>
                <value>
                    <fullName>DR12</fullName>
                </value>
                <value>
                    <fullName>DR13</fullName>
                </value>
                <value>
                    <fullName>DR14</fullName>
                </value>
                <value>
                    <fullName>DR15</fullName>
                </value>
                <value>
                    <fullName>DR16</fullName>
                </value>
                <value>
                    <fullName>DR17</fullName>
                </value>
                <value>
                    <fullName>DR18</fullName>
                </value>
                <value>
                    <fullName>DR19</fullName>
                </value>
                <value>
                    <fullName>DR20</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ffr__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Summary</fullName>
                    <default>true</default>
                    <label>Summary</label>
                </value>
                <value>
                    <fullName>Detail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Reporting Data Range</label>
    <nameField>
        <label>Reporting Data Range Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Reporting Data Ranges</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>